
enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
}

message PhoneNumber {
    required string number = 1;
    optional PhoneType phoneType = 2 [default = HOME];
}

message Person {
    required string name = 1;
    required int32 id = 2;
    optional string email = 3;
    repeated PhoneNumber phoneNumber = 4;
}

message AddressBook {
    required string description = 1;
    repeated Person person = 2;
}


